--- a/webpack-project/src/pages/news.html
+++ b/webpack-project/src/pages/news.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Новини</title>
     <link rel="stylesheet" href="../style/index.css">
+    <!-- Додаємо стилі для друку -->
+    <link rel="stylesheet" href="../style/print.css" media="print">
+    <!-- Умовний коментар для IE -->
+    <!--[if lt IE 11]>
+    <style>
+        .ie-warning {
+            display: block;
+            background-color: yellow;
+            color: red;
+            padding: 10px;
+            text-align: center;
+        }
+    </style>
+    <![endif]-->
+    
 </head>
 <body>
     <header>
